# MyDictionaryApp

./: AddWordDialog.cpp  CMakeLists.txt  Dictionary.cpp  Dictionary.h  EditWordDialog.cpp  MyDictionaryApp.slnx  TrainDialog.cpp  main.cpp
MyDictionaryApp/: AddWordDialog.cpp  MyDictionaryApp.cpp  MyDictionaryApp.rc  MyDictionaryApp.vcxproj  MyDictionaryApp.vcxproj.filters  Resource.h
